kubernetes_deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: pratyu2364/backend-rep:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 9001
      targetPort: 9001
